--- a/src/all.module.css
+++ b/src/all.module.css
@@ -1106,6 +1106,7 @@ input[type=range]::-ms-thumb {margin-top: 1px;height: 25px;width: 25px;border-ra
 .FinalizeSequenceBoxIn .CreationPageLabelF input {width: 90%; margin-top: 10px;}
 .FinalizeSequenceBoxIn .CreationPageLabelF p {font-size: 11px; font-weight: normal;}
 .CollectionRight .exploreBanners {display: none;}
+.FarmingAsideInfoLP {display: inline-block;width: 215px; text-align: left;font-size: 12px; vertical-align: middle; margin-right: 10px;}
 
 
 
