--- a/src/all.module.css
+++ b/src/all.module.css
@@ -1002,21 +1002,31 @@ input[type=range]::-ms-thumb {margin-top: 1px;height: 25px;width: 25px;border-ra
 .NavigationItem:hover .Hand {display: inline-block;}
 .selected {font-weight: bold;}
 .indicator {height: 30px;}
-.ThemeSelect {width: 150px; display: block; text-align: left; margin: 20px auto 0px 15px;}
-.ThemeSelect select {padding: 5px 10px; border-radius: 12px; text-align: center; border: none;}
 
 .medium {width: 500px; position: relative; overflow: scroll; max-height: 70%;  z-index: 100000000000000; border-radius: 20px;box-shadow: 1px 1px 2px 1px rgb(202 202 202 / 32%);-webkit-box-shadow: 1px 1px 2px 1px rgb(202 202 202 / 32%);-moz-box-shadow: 1px 1px 2px 1px rgba(202,202,202,0.32); padding: 40px; z-index: 1000000000000000000;}
 .Small {width: 500px; position: relative; overflow: scroll; max-height: 70%;  z-index: 100000000000000;border-radius: 20px;box-shadow: 1px 1px 2px 1px rgb(202 202 202 / 32%);-webkit-box-shadow: 1px 1px 2px 1px rgb(202 202 202 / 32%);-moz-box-shadow: 1px 1px 2px 1px rgba(202,202,202,0.32); padding: 40px; z-index: 1000000000000000000;}
 .Large {width: 500px; position: relative; overflow: scroll; max-height: 70%;  z-index: 100000000000000; border-radius: 20px;box-shadow: 1px 1px 2px 1px rgb(202 202 202 / 32%);-webkit-box-shadow: 1px 1px 2px 1px rgb(202 202 202 / 32%);-moz-box-shadow: 1px 1px 2px 1px rgba(202,202,202,0.32); padding: 40px; z-index: 1000000000000000000;}
 .BackButton {position: absolute; top: 0px; left: 0px; padding: 5px 10px; font-size: 13px; border-radius: 100% 10px 10px 0px; background-color: tomato; color: #ffffff; z-index: 100;}
 
-.Web3Connect {display: block; text-align:left; margin:40px auto 0px auto; padding-left: 15px;}
+.Web3Connect {display: inline-block; text-align:left; padding-left: 20px;}
 .Web3ConnectChain {height: 35px;display: inline-block; padding: 3px 5px; border-radius: 5px;  margin: 0 10px 0 0px; vertical-align: middle;}
 .Web3ConnectChain img {width:25px; height:25px; display: inline-block; margin: 3px; vertical-align: middle;}
 .Web3ConnectChain p {display: inline-block; margin: 3px;vertical-align: middle; font-size: 15px;}
-.Web3ConnectWallet {height: 40px;display: inline-block; padding: 3px 8px; border-radius: 12px;vertical-align: middle; cursor: pointer; max-width: 190px; text-align: center;}
-.Web3ConnectWallet img {width:30px; height:30px; display: inline-block; margin: 3px 3px 3px -7px; vertical-align: middle;object-fit: contain;}
-.Web3ConnectWallet p {display: inline-block; vertical-align: middle;font-size: 10.5px; font-weight: bold; max-width: 130px; overflow: hidden;}
+.Web3ConnectWallet {height: 40px;display: inline-block; padding: 2px 0px; border-radius: 12px;vertical-align: middle; cursor: pointer; width: 200px; text-align: left;}
+.Web3ConnectWallet img {width:30px; height:30px; border-radius: 12px; display: inline-block; margin: 3px 3px 3px 0px; vertical-align: middle;object-fit: contain;}
+.Web3ConnectWallet p {display: inline-block; vertical-align: middle;font-size: 12px; font-weight: bold; max-width: 135px; overflow: hidden; margin-left: 5px;}
+
+.ThemeSelect {width: 60px; display: inline-block; text-align: left; margin: 20px auto 0px 15px;}
+.ThemeSelect select {padding: 10px 10px; border-radius: 12px; text-align: center; border: none;}
+
+.NetworkSelect {width: 140px; display: inline-block; text-align: left; margin: 20px auto 0px 15px;border-radius: 12px;}
+.NetworkSelectL1 {border-radius: 12px 0px 0px 12px; opacity: 0.5;}
+.NetworkSelectL2 {border-radius: 0px 12px 12px 0px; opacity: 0.5;}
+.NetworkSelect a {padding: 5px 4px; text-align: center; border: none; width: 60px; display: inline-block;}
+.NetworkSelect img {width:20px; height:20px;display: inline-block; margin: 3px 3px 3px 0px; vertical-align: middle;}
+.NetworkSelect p {display: inline-block; vertical-align: middle;font-size: 12px; font-weight: bold; max-width: 40px; overflow: hidden; margin-left: 2px;}
+
+.RightMenu {width: 50%; text-align: right; display: inline-block;position: fixed; right: 15px; top: 15px;}
 
 .ObjectsLists {width: 100%; display: inline-block;}
 .TokenObject {width: 100%; height: 100px; display: inline-block; padding: 0px 0px 0px 0px; text-align: center;vertical-align: top; border: 0px solid; border-radius: 20px; overflow: hidden; cursor: pointer; margin: 5px auto;}
@@ -1632,8 +1642,6 @@ input[type=range]::-ms-thumb {margin-top: 1px;height: 25px;width: 25px;border-ra
 .biz .proggressCreatePerchLast {background-color: #00F1C2;color: #ffffff;}
 .dark .proggressCreatePerchLast {background-color: #00F1C2;color: #ffffff;}
 
-
-
 .light .DelegationHeadlineCardSideD {background-color: #EEEEEE;}
 .biz .DelegationHeadlineCardSideD {background-color: #EEEEEE;}
 .dark .DelegationHeadlineCardSideD {background-color: #1b1b1b;}
@@ -2089,6 +2097,19 @@ input[type=range]::-ms-thumb {margin-top: 1px;height: 25px;width: 25px;border-ra
 .light input[type=range]:focus::-ms-fill-upper {background: #849BBD;}
 .biz input[type=range]:focus::-ms-fill-upper {background: #849BBD;}
 .dark input[type=range]:focus::-ms-fill-upper {background: #849BBD;}
+
+
+.light .NetworkSelectL1 {background-color: #627eea;}
+.biz .NetworkSelectL1 {background-color: #627eea;}
+.dark .NetworkSelectL1 {background-color: #627eea;}
+
+.light .NetworkSelectL2 {background-color: #ff0420;}
+.biz .NetworkSelectL2 {background-color: #ff0420;}
+.dark .NetworkSelectL2 {background-color: #ff0420;}
+
+.light .NetworkSelect p {color: #ffffff}
+.biz .NetworkSelect p {color: #ffffff}
+.dark .NetworkSelect p {color: #ffffff}
 
 
 @media only screen and (max-width: 1200px) {
