--- a/src/components/Global/MainTemplate/main-template.module.css
+++ b/src/components/Global/MainTemplate/main-template.module.css
@@ -28,6 +28,7 @@
 
 @media only screen and (max-width: 1200px) {
   .container { width: 98%; margin: 20px auto;}
+  .root { padding-top: 0px;}
 }
 @media only screen and (max-device-width: 990px) {
   .root {display: none !important;}
