--- a/src/all.module.css
+++ b/src/all.module.css
@@ -24,6 +24,14 @@ body {
 
 /* Global Components */
 
+@keyframes ldio_f2vadqclpalj {0% { transform: rotate(0deg) }100% { transform: rotate(360deg) }}
+.ldio_f2vadqclpalj > div > div {position: absolute;border-radius: 50%;}
+.ldio_f2vadqclpalj > div > div:nth-child(1) {top: 3px;left: 3px;width: 94px;height: 94px;background: #ffffff;}
+.ldio_f2vadqclpalj > div > div:nth-child(2) {top: 9.580000000000005px;left: 20.860000000000003px;width: 58.279999999999994px;height: 58.279999999999994px;background: #7474f7;animation: ldio_f2vadqclpalj 1.4925373134328357s linear infinite;transform-origin: 29.139999999999997px 40.419999999999995px;}
+.loadingio_spinner_disk_hn1zpmja0x6 {width: 48px;height: 48px;display: inline-block;overflow: hidden;background: none;}
+.ldio_f2vadqclpalj {width: 100%;height: 100%;position: relative;transform: translateZ(0) scale(0.48);backface-visibility: hidden;transform-origin: 0 0; /* see note above */}
+.ldio_f2vadqclpalj div { box-sizing: content-box; }
+
 .ActionAWeb3Button {width: 100%; margin: 15px auto; text-align: center;}
 .ActionAWeb3Button button {width: auto; margin: 0 auto; padding: 9px 15px; text-align: center; font-size: 15px; border-radius: 15px; border: none !important; cursor: pointer;background-color: #7474f7; color: #ffffff; font-weight: bold;}
 .ActionAWeb3Button button:disabled {font-weight: normal !important;  color: #6e6e6e !important; cursor: default;}
@@ -183,7 +191,7 @@ body {
 .TradeOTCBoxOrdersBuy h6, .TradeOTCBoxOrdersSell h6 {font-size: 13px; width: 100%; text-align: center; padding: 10px 0;}
 .TradeInfoThings {width: 90%; display: inline-block; margin: 20px  0px auto;}
 .TradeInfoThings .ActionInfoSection {width: 300px; overflow: hidden; height: 50px;}
-.TradeInfoThings .LoaderA {width: 10px; height: 10px; display: inline-block; overflow: hidden;}
+.TradeInfoThings .LoaderA {width: 10px; height: 10px; display: inline-block; display: absolute; left: 1px; top: 1px;}
 
 .DeckMarketPlace {width: 970px;  margin-bottom: 150px; display: inline-block; text-align: center; padding: 5px; border-radius: 20px;}
 .DeckMarketPlace h6 {display: inline-block; width: 100%; margin: 20px auto 40px auto;}
@@ -1217,6 +1225,11 @@ input[type=range]::-ms-thumb {margin-top: 1px;height: 25px;width: 25px;border-ra
 .biz p,.biz b,.biz figure,.biz span,.biz a,.biz h6,.biz h5,.biz h4,.biz h3,.biz h2,.biz h1,.biz aside, .biz input, .biz div  {color: #000000;-ms-overflow-style: none;scrollbar-width: none;}
 .dark p,.dark b,.dark figure,.dark span,.dark a,.dark h6,.dark h5,.dark h4,.dark h3,.dark h2,.dark h1,.dark aside, .dark input, .dark div {color: #ffffff;-ms-overflow-style: none;scrollbar-width: none;}
 .sepia p,.sepia b,.sepia figure,.sepia span,.sepia a,.sepia h6,.sepia h5,.sepia h4,.sepia h3,.sepia h2,.sepia h1,.sepia aside,.sepia input, .sepia div {color: #49646a;-ms-overflow-style: none;scrollbar-width: none;}
+
+.light .ldio_f2vadqclpalj > div > div:nth-child(1) {background: #ffffff;}
+.dark .ldio_f2vadqclpalj > div > div:nth-child(1) {background: #000000;}
+.biz .ldio_f2vadqclpalj > div > div:nth-child(1) {background: #ffffff;}
+.sepia .ldio_f2vadqclpalj > div > div:nth-child(1) {background: #49646a;}
 
 .biz a, .biz div,.biz figure, .biz input, .biz ul, .biz li, .biz nav, .biz select, .biz button, .biz span {border-radius: 20px !important;}
 
